--- a/src/layout/style/layout.css
+++ b/src/layout/style/layout.css
@@ -1,3 +1,13 @@
+.sidebar{
+    display: block;
+}
+
+@media only screen and (max-width: 768px) {
+    .sidebar{
+        display: none;
+    }
+}
+
 .wrapper{
     width: auto;
     padding-left: 16em;
